--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>What number is the dice going to lang on?</h1>
+<h1>What number is the dice going to land on?</h1>
 <a href="/roll-dice/1">1</a>
 <a href="/roll-dice/2">2</a>
 <a href="/roll-dice/3">3</a>
