--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -8,8 +8,8 @@
         Featured
     </div>
     <div class="card-body">
-        <h5 class="card-title">Title: <span th:text="${post.title}"></span></h5>
-        <p class="card-text">Body: <span th:text="${post.body}"></span></p>
+        <h5 class="card-title"><span th:text="${post.title}"></span></h5>
+        <p class="card-text"><span th:text="${post.body}"></span></p>
         <a href="/posts" class="btn btn-primary">Go back</a>
     </div>
 </div>
