--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -4,7 +4,7 @@
 <body>
 <nav th:replace="partials :: navbar"></nav>
 <h1>Here are the existing posts!</h1>
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 100%;">
     <div class="card-header">
         Title
     </div>
@@ -19,6 +19,7 @@
                 <button class="btn btn-outline-primary" type="submit">Edit</button>
             </form>
             <br />
+            <iframe src="https://giphy.com/embed/3oEduYFIo6BNdBYN6U" width="480" height="271" frameBorder="0"></iframe><p><a href="https://giphy.com/gifs/fntaic-girl-3oEduYFIo6BNdBYN6U">via GIPHY</a></p>
         </li>
     </ul>
 </div>
