--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -12,10 +12,9 @@
             <a href="/">Home</a>
             <a href="/posts">View Posts</a>
             <a href="/posts/create">Create a Post</a>
-            <!--<form class="form-inline">-->
-                <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />-->
-                <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
-            <!--</form>-->
+            <form th:action="@{/logout}" th:method="post">
+                <button class="btn-link btn" style="margin-top: 8px">Logout</button>
+            </form>
         </nav>
     </nav>
 <th:block th:fragment="footer">
