--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -5,11 +5,12 @@
 <nav th:replace="partials :: navbar"></nav>
 <div class="card">
     <div class="card-header">
-        Featured
+        Post
     </div>
     <div class="card-body">
         <h5 class="card-title"><span th:text="${post.title}"></span></h5>
         <p class="card-text"><span th:text="${post.body}"></span></p>
+        <p class="card-text"><span th:text="${post.owner.email}"></span></p>
         <a href="/posts" class="btn btn-primary">Go back</a>
     </div>
 </div>
