added animation to title

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head th:replace="partials :: head" />
 <body>
 <nav th:replace="partials :: navbar"></nav>
-    <h1>This is the home page</h1>
+    <h1 class="slide-fwd-center">This is the home page</h1>
     <script th:replace="partials :: footer"></script>
 </body>
 </html>
