--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous" />
+    <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 <body>
