added stylesheet and began to implement css

--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -4,7 +4,7 @@
 <body>
 <nav th:replace="partials :: navbar"></nav>
 <h1>Here are the existing posts!</h1>
-<div class="card" style="width: 100%;">
+<div class="card eight">
     <div class="card-header">
         Title
     </div>
@@ -23,7 +23,6 @@
         </li>
     </ul>
 </div>
-
 <script th:replace="partials :: footer"></script>
 </body>
 </html>
