--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -12,6 +12,8 @@
             <a href="/">Home</a>
             <a href="/posts">View Posts</a>
             <a href="/posts/create">Create a Post</a>
+            <a href="/sign-up">Create Account</a>
+            <a href="/login">Login</a>
             <form th:action="@{/logout}" th:method="post">
                 <button class="btn-link btn" style="margin-top: 8px">Logout</button>
             </form>
