--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -5,19 +5,68 @@
     <title>Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous" />
     <link rel="stylesheet" href="/style.css" type="text/css" />
+    <link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet' />
+    <style>
+        body {
+            font-family: 'Actor';font-size: 22px;
+        }
+    </style>
 </head>
 <body>
     <nav th:fragment="navbar">
-        <nav class="navbar navbar-light bg-light justify-content-between">
-            <a href="/">Home</a>
-            <a href="/posts">View Posts</a>
-            <a href="/posts/create">Create a Post</a>
-            <a href="/sign-up">Create Account</a>
-            <a href="/login">Login</a>
-            <form th:action="@{/logout}" th:method="post">
-                <button class="btn-link btn" style="margin-top: 8px">Logout</button>
-            </form>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/">Some dude's blog</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/posts">See all Posts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/posts/create">Create a Post</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            User Actions
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="/login">Log in</a>
+                            <a class="dropdown-item" href="/sign-up">Create Account</a>
+                            <form th:action="@{/logout}" th:method="post">
+                                <button class="dropdown-item" style="color: red; cursor: pointer">Logout</button>
+                            </form>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </nav>
+        <!--<nav class="navbar navbar-light bg-light justify-content-between">-->
+            <!--<ul>-->
+                <!--<li class="nav-item">-->
+                    <!--<a href="/">Home</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a href="/posts">View Posts</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a href="/posts/create">Create a Post</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a href="/sign-up">Create Account</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a href="/login">Login</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</nav>-->
     </nav>
 <th:block th:fragment="footer">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
