--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-size: cover;
-    background: url("/beautiful_blog_design-1.png") no-repeat fixed center;
+    background: url("/static/beautiful_blog_design-1.png") no-repeat fixed center;
 }
 
 body, html {
@@ -25,4 +25,20 @@ body, html {
     display: block;
     background: #555;
     transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
+}
+
+#footblock {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 120px;
+    background-color: whitesmoke;
+    color: white;
+    text-align: center;
+}
+
+.avoid {
+    margin-bottom: 150px;
+    margin-left: 3rem;
 }
