--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/posts/create">Create a Post</a>
                     </li>
+                    <li>
+                        <a class="nav-link" href="/game">Play a Game?</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             User Actions
@@ -45,30 +48,9 @@
                 </ul>
             </div>
         </nav>
-        <!--<nav class="navbar navbar-light bg-light justify-content-between">-->
-            <!--<ul>-->
-                <!--<li class="nav-item">-->
-                    <!--<a href="/">Home</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a href="/posts">View Posts</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a href="/posts/create">Create a Post</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a href="/sign-up">Create Account</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-                    <!--<a href="/login">Login</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item">-->
-
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</nav>-->
     </nav>
 <th:block th:fragment="footer">
+    <div id="footblock"></div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
